Update and rename Assignment_(Part_B).ipynb to Extracting Person and Geographical Areas Name.ipynb

--- a/Extracting Person and Geographical Areas Name.ipynb
+++ b/Extracting Person and Geographical Areas Name.ipynb
@@ -979,7 +979,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Now, I have completed my Fourth Task successfully. Now i will move to my next and Final task of API creation. I will perform that task on other Notebook with my saved JSON data (Assignment (Part C)).\n",
+        "Now, I have completed my Fourth Task successfully. Now i will move to my next and Final task of API creation. I will perform that task on other Notebook with my saved JSON data (API Creation).\n",
         "\n",
         "(NOTE : I can continue with this Notebook as well but as i am completing this task with some intervals whenever i am opening this notebook i need to re-run all codes to make things continue and it is taking lot of Time so i am choosing to work on separate notebook with saved data.)\n",
         "\n",
