Update Exploring IMDB Dataset.ipynb

--- a/Exploring IMDB Dataset.ipynb
+++ b/Exploring IMDB Dataset.ipynb
@@ -758,7 +758,7 @@
         "colab_type": "text"
       },
       "source": [
-        "As Spacy is taking alot of time and because i am working on Colab Notebook so completing this process in one go is difficult, So completing that question via NLTK in next part(Assignment (Part B)).\n",
+        "As Spacy is taking alot of time and because i am working on Colab Notebook so completing this process in one go is difficult, So completing that question via NLTK in next part(Extracting Person and Geographical Areas Name).\n",
         "\n",
         "Thanks,\n",
         "\n",
